fixes scrolling and z-index

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -31,5 +31,8 @@ router-outlet ~ * {
 
   display: block;
   margin: $gap;
+  overflow-y: scroll;
+  bottom: $menu-height;
+  top: $header-height;
   position: fixed;
 }
